# tcp_custom_service

./: CMakeLists.txt
api-gateway/: CMakeLists.txt  main.cc  tcp_gateway_service.h
chat-client/: CMakeLists.txt  tcp_chat_client.cc
common/: context_propagation.h  models.h  tcp_context_propagation.h  tcp_service_base.h  telemetry.h
message-service/: CMakeLists.txt  main.cc  tcp_message_service.h
notification-service/: CMakeLists.txt  main.cc  tcp_notification_service.h
script/: check_tcp_services.sh  start_tcp_services.sh  stop_tcp_services.sh
user-service/: CMakeLists.txt  main.cc  tcp_user_service.h
